# libgel

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.sh  clean.sh
android/: AndroidManifest_in.xml  SDLActivity_in.java  build_in.gradle  strings_in.xml
android/jni/: Android.mk  Bullet.mk  EntityX.mk
assets/: AnimatedTriangle.gltf  AppleTree.gltf  Box.gltf  BoxAnimated.gltf  BoxTextured.gltf  Triangle.gltf  TriangleWithoutIndices.gltf  commands.txt  default.frag  default.vert  test.xcf  texTest.frag  text.vert  uber.frag  uber.vert
assets/model/: box.blend
assets/neko/: AUTHOR  scene.gltf
core/src/: Application.hpp  Camera.hpp  Common.hpp  DefaultAppListener.hpp  Input.hpp  MyAppListener.hpp  Shader.hpp  ShapeBuilder.hpp  Vertices.hpp  glfAppListener.hpp  main.cpp
core/src/helper/: ShaderBuilder.hpp  UIBuilder.hpp  Utility.hpp
core/src/interfaces/: GL_Interface.hpp
core/src/system/: AssetSystem.hpp  FontSystem.hpp  MeshSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  ResourceSystem.hpp  ShaderSystem.hpp  TextureSystem.hpp  VertexSystem.hpp
libgel_alt/: linux_install.txt
libgel_alt/linux-i386/: CMakeLists.txt  Vagrantfile  bootstrap.sh  installedPackages.txt
libgel_alt/linux-i386/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
libgel_alt/linux-x64/: CMakeLists.txt  Vagrantfile  bootstrap.sh  build.sh
libgel_alt/linux-x64/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
libgel_alt/linux-x64/cmake/: FindSDL2_ttf.cmake  FindXext.cmake
